[project]
name = "mavlinklinktester"
version = "1.0.0"
description = "Characterise the reliability and latency of MAVLink connections"
authors = [{ name = "Stephen Dade", email = "stephen_dade@hotmail.com" }]
maintainers = [{ name = "Stephen Dade", email = "stephen_dade@hotmail.com" }]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pymavlink>=2.4.49,<3.0.0",
    "pyserial>=3.5,<4.0.0",
    "pyserial-asyncio>=0.6,<0.7"
]

[project.urls]
homepage = "https://github.com/stephendade/mavlinklinktester"
repository = "https://github.com/stephendade/mavlinklinktester"

[project.scripts]
"mavlink-link-tester.py" = "mavlinklinktester.mavlink_link_tester:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
flake8 = "^6.0"
mypy = "^1.0"
vulture = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

